src/scss/components/_icons.scss
@use 'sass:string';

$font-family-icons-lower: string.to-lower-case($font-family-icons);

@include font-face(
  $font-family-icons,
  $font-path-icons + $font-family-icons-lower + '/' + $font-family-icons-lower,
  $font-extensions-icons
);

[class^='ri-'],
[class*='ri-'] {
  font-family: remixicon, sans-serif !important;
  font-style: normal;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.ri-lg {
  font-size: 1.3333em;
  line-height: 0.75em;
  vertical-align: -0.0667em;
}

.ri-xl {
  font-size: 1.5em;
  line-height: 0.6666em;
  vertical-align: -0.075em;
}

.ri-xxs {
  font-size: 0.5em;
}

.ri-xs {
  font-size: 0.75em;
}

.ri-sm {
  font-size: 0.875em;
}

.ri-1x {
  font-size: 1em;
}

.ri-2x {
  font-size: 2em;
}

.ri-3x {
  font-size: 3em;
}

.ri-4x {
  font-size: 4em;
}

.ri-5x {
  font-size: 5em;
}

.ri-6x {
  font-size: 6em;
}

.ri-7x {
  font-size: 7em;
}

.ri-8x {
  font-size: 8em;
}

.ri-9x {
  font-size: 9em;
}

.ri-10x {
  font-size: 10em;
}

.ri-fw {
  text-align: center;
  width: 1.25em;
}

.ri-space {
  min-width: 2em;
  line-height: 2em;
}

.ri-wifi-line::before {
  content: '\f2c0';
}

.ri-computer-line::before {
  content: '\ebca';
}

.ri-printer-line::before {
  content: '\f029';
}

.ri-phone-line::before {
  content: '\efec';
}

.ri-map-pin-2-line::before {
  content: '\ef0a';
}

.ri-add-line::before {
  content: '\ea13';
}

.ri-arrow-right-s-fill::before {
  content: '\ea6d';
}

.ri-check-line::before {
  content: '\eb7b';
}

.ri-close-line::before {
  content: '\eb99';
}

.ri-checkbox-blank-circle-line::before {
  content: '\eb7d';
}

.ri-calendar-check-line::before {
  content: '\eb23';
}

.ri-mail-line::before {
  content: '\eef6';
}

.ri-arrow-right-s-line::before {
  content: '\ea6e';
}

.ri-arrow-left-s-line::before {
  content: '\ea64';
}

.ri-mouse-line::before {
  content: '\ef7d';
}

.ri-group-line::before {
  content: '\ede3';
}

.ri-wheelchair-line::before {
  content: '\f2be';
}

.ri-parent-line::before {
  content: '\efca';
}

.ri-user-3-line::before {
  content: '\f256';
}

.ri-tools-line::before {
  content: '\f21b';
}

.ri-error-warning-line::before {
  content: '\eca1';
}

.ri-service-line::before {
  content: '\f0e2';
}

.ri-checkbox-blank-circle-fill::before {
  content: '\eb7c';
}

.ri-equalizer-fill::before {
  content: '\ec9c';
}

.ri-account-pin-circle-fill::before {
  content: '\ea0c';
}

.ri-arrow-right-circle-fill::before {
  content: '\ea67';
}

.ri-arrow-left-circle-fill::before {
  content: '\ea5b';
}

.ri-arrow-go-back-line::before {
  content: '\ea58';
}

.ri-external-link-line::before {
  content: '\ecaf';
}

.ri-file-text-line::before {
  content: '\ed0f';
}

.ri-link::before {
  content: '\eeb2';
}

.ri-list-check::before {
  content: '\eeba';
}

.ri-mail-send-line::before {
  content: '\eefc';
}

.ri-skip-forward-line::before {
  content: '\f144';
}

.ri-map-pin-5-line::before {
  content: '\ef10';
}

.ri-settings-4-line::before {
  content: '\f0e8';
}

.ri-calendar-todo-line::before {
  content: '\eb29';
}

.ri-road-map-line::before {
  content: '\f08e';
}

.ri-subtract-line::before {
  content: '\f1af';
}

.ri-smartphone-line::before {
  content: '\f15a';
}

.ri-user-line::before {
  content: '\f264';
}

.ri-user-star-line::before {
  content: '\f276';
}

.ri-slideshow-line::before {
  content: '\f158';
}

.ri-stethoscope-line::before {
  content: '\f197';
}

.ri-shopping-cart-line::before {
  content: '\f120';
}

.ri-settings-5-line::before {
  content: '\f0ea';
}

.ri-contacts-line::before {
  content: '\ebd2';
}

.ri-medal-line::before {
  content: '\ef28';
}

.ri-image-2-line::before {
  content: '\ee45';
}

.ri-pen-nib-line::before {
  content: '\efde';
}

.ri-map-2-line::before {
  content: '\ef06';
}

.ri-focus-3-line::before {
  content: '\ed4c';
}

.ri-sound-module-line::before {
  content: '\f162';
}

.ri-arrow-left-right-line::before {
  content: '\ea62';
}

.ri-arrow-down-s-line::before {
  content: '\ea4e';
}

.ri-account-circle-fill::before {
  content: '\ea08';
}

.ri-information-line::before {
  content: '\ee59';
}

